install_data (
    'gschema.xml',
    install_dir: join_paths (get_option ('datadir'), 'glib-2.0', 'schemas'),
    rename: meson.project_name () + '.gschema.xml'
)

install_data(
    'appdata.xml',
    install_dir: join_paths(get_option('datadir'), 'metainfo'),
    rename: meson.project_name () + '.appdata.xml'
)
